# Rubiks-Cube-Solver-

./: CMakeLists.txt  README.md  main.cpp
models/: 3DArrayModel.cpp  RubiksCube.cpp  RubiksCube.h
src/: main.cpp
src/models/: 3DArrayModel.cpp  RubiksCube.cpp  RubiksCube.h
src/utils/: Random.h
